Dark mode 4 life, also fixed navbar for mobile

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -8,7 +8,8 @@
 .card {
     margin: 0 6vw;
     padding: 1em 1.65em;
-    background-color: #fefefe;
+    background-color: #2a2a2a;
+    color: #fff;
     box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
     border: solid 0.2em #4cc2c4;
     border-radius: 0.5em;
