--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -24,7 +24,7 @@ body {
   margin: 0;
   font-family: 'Zilla Slab', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    background-color: #0A1172;
+    background-color: #31383d;
   
 }
 
